// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Progress Notification List can render correctly 1`] = `
<div
  className="sc-ifAKCX ipbtqc"
  role="list"
>
  <div
    aria-selected={false}
    className="sc-bdVaJa gneklD"
    role="listitem"
  >
    <span
      className="sc-bwzfXH cJKlyb"
    >
      process
    </span>
    <div
      className="sc-htpNat hkuyqD"
    >
      <div
        className="sc-bxivhb MqTMw"
      />
    </div>
  </div>
</div>
`;

exports[`Project Progress Notification List can render with empty list of notification 1`] = `
<div
  className="sc-ifAKCX ipbtqc"
  role="list"
/>
`;

exports[`Project Progress Notification List should render progresses 1`] = `
<div
  className="sc-ifAKCX ipbtqc"
  role="list"
>
  <div
    aria-selected={false}
    className="sc-bdVaJa gneklD"
    role="listitem"
  >
    <span
      className="sc-bwzfXH cJKlyb"
    >
      foo
    </span>
    <div
      className="sc-htpNat hkuyqD"
    >
      <div
        className="sc-bxivhb jQexdE"
      />
    </div>
  </div>
  <div
    aria-selected={false}
    className="sc-bdVaJa gneklD"
    role="listitem"
  >
    <span
      className="sc-bwzfXH cJKlyb"
    >
      bar
    </span>
    <div
      className="sc-htpNat hkuyqD"
    >
      <div
        className="sc-bxivhb iKWdPW"
      />
    </div>
  </div>
</div>
`;
